[REFACTOR] Throughout refactor for the whole of supermarket