@@ -3,6 +3,7 @@ package heymart.backend.controller;
 import heymart.backend.models.Supermarket;
 import heymart.backend.service.SupermarketServiceImpl;
 
+import org.apache.coyote.Response;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,9 +14,7 @@ import org.mockito.quality.Strictness;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
@@ -23,7 +22,6 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
 public class SupermarketControllerTest {
 
     @Mock
@@ -33,106 +31,73 @@ public class SupermarketControllerTest {
     private SupermarketController supermarketController;
 
     @Test
-    public void testCreateSupermarket() {
-        Supermarket supermarket = new Supermarket.Builder()
-                .setId(1L)
-                .setName("Supermarket ABC")
-                .setOwnerId(1L)
-                .setProductIds(Arrays.asList(1L, 2L, 3L))
+    void testCreateSupermarket() {
+        Supermarket supermarket = Supermarket.builder()
+                .supermarketId(UUID.fromString("123e4567-e89b-12d3-a456-426614174000"))
+                .name("Supermarket ABC")
+                .ownerId(1L)
+                .productIds(new ArrayList<>(List.of(UUID.fromString("123e4567-e89b-12d3-a456-426614174000"),
+                        UUID.fromString("123e4567-e89b-12d3-a456-426614174001"),
+                        UUID.fromString("123e4567-e89b-12d3-a456-426614174002"))))
                 .build();
 
-        when(supermarketService.save(supermarket)).thenReturn(CompletableFuture.completedFuture(supermarket));
+        CompletableFuture<Supermarket> future = CompletableFuture.completedFuture(supermarket);
+        when(supermarketService.save(any(Supermarket.class))).thenReturn(future);
 
-        try {
-            ResponseEntity<Supermarket> result = supermarketController.createSupermarket(supermarket);
+        ResponseEntity<?> responseEntity = supermarketController.createSupermarket(supermarket).join();
 
-            assertEquals(HttpStatus.OK, result.getStatusCode());
-            assertEquals(supermarket, result.getBody());
-            verify(supermarketService, times(1)).save(supermarket);
-        } catch (InterruptedException | ExecutionException e) {
-            fail("Exception occurred: " + e.getMessage());
-        }
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        assertEquals(supermarket, responseEntity.getBody());
+        verify(supermarketService, times(1)).save(supermarket);
     }
 
     @Test
     public void testGetSupermarketById() {
-        Supermarket supermarket = new Supermarket.Builder()
-                .setId(1L)
-                .setName("Supermarket ABC")
-                .setOwnerId(1L)
-                .setProductIds(Arrays.asList(1L, 2L, 3L))
+        UUID id = UUID.randomUUID();
+        List<UUID> productId = new ArrayList<>(Arrays.asList(UUID.randomUUID(), UUID.randomUUID(), UUID.randomUUID()));
+        Supermarket supermarket = Supermarket.builder()
+                .supermarketId(id)
+                .name("Supermarket ABC")
+                .ownerId(1L)
+                .productIds(productId)
                 .build();
 
-        when(supermarketService.findBySupermarketId(1L)).thenReturn(CompletableFuture.completedFuture(Optional.of(supermarket)));
+        CompletableFuture<Supermarket> future = CompletableFuture.completedFuture(supermarket);
+        when(supermarketService.findById(id)).thenReturn(future);
 
-        try{
-            ResponseEntity<Supermarket> result = supermarketController.getSupermarketById(1L);
+        ResponseEntity<?> responseEntity = supermarketController.getSupermarketById(id).join();
 
-            assertEquals(HttpStatus.OK, result.getStatusCode());
-            assertEquals(supermarket, result.getBody());
-            verify(supermarketService, times(1)).findBySupermarketId(1L);
-        } catch (InterruptedException | ExecutionException e) {
-            fail("Exception occurred: " + e.getMessage());
-        }
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        verify(supermarketService, times(1)).findById(id);
     }
 
     @Test
     public void testGetAllSupermarkets() {
-        Supermarket supermarket = new Supermarket.Builder()
-                .setId(1L)
-                .setName("Supermarket ABC")
-                .setOwnerId(1L)
-                .setProductIds(Arrays.asList(1L, 2L, 3L))
+        List<Supermarket> supermarketList = new ArrayList<>();
+        Supermarket supermarket = Supermarket.builder()
+                .supermarketId(UUID.randomUUID())
+                .name("Supermarket ABC")
+                .ownerId(1L)
+                .productIds(new ArrayList<>(Arrays.asList(UUID.randomUUID(), UUID.randomUUID(), UUID.randomUUID())))
                 .build();
-        Supermarket supermarket2 = new Supermarket.Builder()
-                .setId(2L)
-                .setName("Supermarket XYZ")
-                .setOwnerId(2L)
-                .setProductIds(Arrays.asList(4L, 5L))
+        supermarketList.add(supermarket);
+        Supermarket supermarket2 = Supermarket.builder()
+                .supermarketId(UUID.randomUUID())
+                .name("Supermarket XYZ")
+                .ownerId(2L)
+                .productIds(new ArrayList<>(Arrays.asList(UUID.randomUUID(), UUID.randomUUID())))
                 .build();
-        List<Supermarket> supermarkets = Arrays.asList(supermarket, supermarket2);
+        supermarketList.add(supermarket2);
 
-        when(supermarketService.findAll()).thenReturn(CompletableFuture.completedFuture(supermarkets));
+        CompletableFuture<List<Supermarket>> future = CompletableFuture.completedFuture(supermarketList);
+        when(supermarketService.findAll()).thenReturn(future);
 
-        try {
-            ResponseEntity<List<Supermarket>> result = supermarketController.getAllSupermarkets();
+        ResponseEntity<?> responseEntity = supermarketController.getAllSupermarkets().join();
 
-            assertEquals(HttpStatus.OK, result.getStatusCode());
-            assertEquals(supermarkets, result.getBody());
-            verify(supermarketService, times(1)).findAll();
-        } catch (InterruptedException | ExecutionException e) {
-            fail("Exception occurred: " + e.getMessage());
-        }
+        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
+        assertEquals(supermarketList, responseEntity.getBody());
+        verify(supermarketService, times(1)).findAll();
     }
 
-    @Test
-    public void testUpdateSupermarket() {
-        Supermarket existingSupermarket = new Supermarket.Builder()
-                .setId(1L)
-                .setName("Supermarket ABC")
-                .setOwnerId(1L)
-                .setProductIds(Arrays.asList(1L, 2L, 3L))
-                .build();
 
-        Supermarket updatedSupermarket = new Supermarket.Builder()
-                .setId(1L)
-                .setName("Supermarket XYZ")
-                .setOwnerId(2L)
-                .setProductIds(Arrays.asList(4L, 5L))
-                .build();
-
-        when(supermarketService.findBySupermarketId(1L)).thenReturn(CompletableFuture.completedFuture(Optional.of(existingSupermarket)));
-        when(supermarketService.save(any(Supermarket.class))).thenReturn(CompletableFuture.completedFuture(updatedSupermarket));
-
-        try{
-            ResponseEntity<Supermarket> result = supermarketController.updateSupermarket(1L, updatedSupermarket);
-
-            assertEquals(HttpStatus.OK, result.getStatusCode());
-            assertEquals(updatedSupermarket, result.getBody());
-            verify(supermarketService, times(1)).findBySupermarketId(1L);
-            verify(supermarketService, times(1)).save(any(Supermarket.class));
-        } catch (InterruptedException | ExecutionException e) {
-            fail("Exception occurred: " + e.getMessage());
-        }
-    }
 }
